--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                          <input type="text" placeholder="e.g., 2024" />
                     </div>
                </div>
-               <button type="button" onclick="addEducation()">➕ Add More Education</button>
+               <button type="button" onclick="bioaddEducation()">➕ Add More Education</button>
 
                <label>Technical Skills</label>
                <textarea id="skills" rows="2" placeholder="Example: HTML, CSS, JS, Python"></textarea>
@@ -209,3 +209,4 @@
 </body>
 
 </html>
+
