--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                </div>
                <button type="button" onclick="generateBiodata()">Preview Biodata</button>
                <button type="button" onclick="downloadJPG()">Download as JPG</button>
-               <button type="button" onclick="refreshForm()">Refresh</button>
+               <button type="button" onclick="clearLocalData()">Refresh</button>
 
 
           </form>
@@ -209,4 +209,5 @@
 </body>
 
 </html>
+
 
