--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                          Hobbies</button>
                </div>
                <button type="button" onclick="generateCV()">Preview CV</button>
-               <button type="button" onclick="downloadJPG()">Download as JPG</button>
+               <button type="button" onclick="downloadJPGcv()">Download as JPG</button>
                <button type="button" onclick="refreshForm()">Refresh</button>
 
 
@@ -210,6 +210,7 @@
      <p
           style="text-align:center; font-size:0.95rem; color:#ffffff; margin:20px auto 0; background: linear-gradient(90deg, #6a11cb, #2575fc); padding: 8px 12px; border-radius: 8px; max-width: 600px; margin-bottom: 10px;">
           <strong>Notice:</strong> When leaving this site, please click the Refresh button.
+     <h6 style="text-decoration: line-through;">51125</h6>
      </p>
 
 </body>
